# contextiva

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env_example  pyproject.toml
brainstorm/: ARCHITECTURE.md  project_structure
chats/: from story 1.4.md
chats/test_contexts/: 1.1.md  1.2.md  1.3.md  1.4.md  1.5.md
docs/: product_requirements.md  project_architecture.md  project_brief.md  project_requirements.md
docs/architecture/: coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  rest-api-spec.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/prd/: background-context.md  epic-1-foundation-core-services-project-management.md  epic-2-knowledge-ingestion-lifecycle-document-task-management.md  epic-3-advanced-rag-retrieval-agent-integration.md  epic-list.md  goals-and-background-context.md  index.md  non-functional.md  requirements.md  technical-assumptions.md
docs/project-brief/: appendices.md  constraints-assumptions.md  executive-summary.md  goals-success-metrics.md  index.md  mvp-scope.md  post-mvp-vision.md  problem-statement.md  proposed-solution.md  risks-open-questions.md  target-users.md  technical-considerations.md
docs/qa/: 1.4-comprehensive-review.md  epic1-comprehensive-test-results.md  story-1.5-comprehensive-review.md  story-3.4-final-review.md
docs/stories/: 1.1.story.md  (+16 more)
migration/: README.md  env.py
(+110 files in other folders)
