[tool.poetry]
name = "contextiva"
version = "0.1.0"
description = "Contextiva backend (FastAPI)"
authors = ["Contextiva Team <dev@contextiva.local>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.5.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.6.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
alembic = "^1.13.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","N","ANN","B","C4","SIM"]
ignore = ["ANN101","ANN102"]

[tool.mypy]
python_version = 3.11
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

